EDU-665 Fix UI vertical alignments

--- a/src/components/file-preview.less
+++ b/src/components/file-preview.less
@@ -5,6 +5,12 @@
   justify-items: stretch;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
+
+  @media @edu-media-phone {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+  }
 }
 
 .FilePreview-previewArea {
