--- a/src/components/files-upload-overview.less
+++ b/src/components/files-upload-overview.less
@@ -23,11 +23,12 @@
 
 .FilesUploadOverview-fileStatusError {
   padding-left: 25px;
+  font-size: 12px;
   color: @edu-error-color;
 }
 
 .FilesUploadOverview-fileStatusContainer {
-  height: 70%;
+  max-height: 70%;
   overflow: scroll;
 }
 
