--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -1,7 +1,9 @@
 .StorageLocation {
   margin: 2px 0;
   display: flex;
+  min-height: 70vh;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .StorageLocation-filesViewer {
@@ -48,6 +50,9 @@
   width: 100%;
   height: 100%;
   background-color: @edu-white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .StorageLocation-screenBack {
